--- a/src/sass/_stage.scss
+++ b/src/sass/_stage.scss
@@ -493,6 +493,7 @@
       width: 100%;
       clear: left;
       float: none;
+      margin: 0;
     }
   }
 
